--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@ Our amazing team combines creativity, passion, and expertise to bring you the fi
                             <h4> Kamal uddin</h4>
                             <p class="text-muted">Designer</p>
                             <a class="btn  btn-social mx-2" href="https://www.youtube.com/@kamalwatchco.9231" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-youtube"></i></a>
-                            <a class="btn  btn-social mx-2" href="" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn  btn-social mx-2" href="www.instagram.com" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-instagram"></i></a>
+                            <a class="btn  btn-social mx-2" href="https://www.facebook.com/login/" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn  btn-social mx-2" href="https://www.tiktok.com/@kamalkakawatches1" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-tiktok"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -237,9 +237,9 @@ Our amazing team combines creativity, passion, and expertise to bring you the fi
                             <img class="mx-auto rounded-circle" src="56bb2366-cbac-4539-b035-00cc15201a25.jpg" alt="..." />
                             <h4>Mumtaz ahmed </h4>
                             <p class="text-muted">Customer Support</p>
-                            <a class="btn  btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-youtube"></i></a>
-                            <a class="btn  btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn  btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-instagram"></i></a>
+                            <a class="btn  btn-social mx-2" href="https://www.youtube.com/@kamalwatchco.9231" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-youtube"></i></a>
+                            <a class="btn  btn-social mx-2" href="https://www.facebook.com/login/" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn  btn-social mx-2" href="https://www.tiktok.com/@kamalkakawatches1" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-tiktok"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -247,9 +247,9 @@ Our amazing team combines creativity, passion, and expertise to bring you the fi
                             <img class="mx-auto rounded-circle" src="515d09c3-a018-4c5f-a034-4f051e3f90f3.jpg" alt="..." />
                             <h4>Tahir nawaz</h4>
                             <p class="text-muted">Lead Marketer</p>
-                            <a class="btn  btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-youtube"></i></a>
-                            <a class="btn  btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn  btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-instagram"></i></a>
+                            <a class="btn  btn-social mx-2" href="https://www.youtube.com/@kamalwatchco.9231" aria-label="Larry Parker Twitter Profile"><i class="fab fa-youtube"></i></a>
+                            <a class="btn  btn-social mx-2" href="https://www.facebook.com/login/" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn  btn-social mx-2" href="https://www.tiktok.com/@kamalkakawatches1" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-tiktok"></i></a>
                         </div>
                     </div>
                 </div>
@@ -332,13 +332,11 @@ We’ll respond as soon as possible.
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">2025 &copy; Mashallah Watch Gift center </div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-social mx-2" href="https://www.youtube.com/@kamalwatchco.9231" aria-label="Twitter"><i class="fab fa-youtube"></i></a>
+                        <a class="btn  btn-social mx-2" href="https://www.facebook.com/login/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn  btn-social mx-2" href="https://www.tiktok.com/@kamalkakawatches1" aria-label="LinkedIn"><i class="fab fa-tiktok"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
                     </div>
                 </div>
             </div>
